SET(CMAKE_CXX_FLAGS "${LENIENT_CXX_FLAGS}")

INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/Catch/include")

MACRO(AddTest Target)
	ADD_EXECUTABLE(${Target} "${Target}.cpp")
	TARGET_LINK_LIBRARIES(${Target} ${ARGN})
ENDMACRO()


# FIND_PACKAGE(GLFW)
# IF(GLFW_FOUND)
# 	AddTest(testGL SparkPlug_GL SparkPlug_ImageIo ${GLFW_LIBRARY})
# 	INCLUDE_DIRECTORIES(${GLFW_INCLUDE_DIR})
# ENDIF()


# FIND_PACKAGE(GLFW3)
# IF(GLFW3_FOUND)
# 	AddTest(testGL3 SparkPlug_GL SparkPlug_ImageIo ${GLFW3_LIBRARY})
# 	INCLUDE_DIRECTORIES(${GLFW3_INCLUDE_DIR})
# ENDIF()
