FILE(GLOB Sources "*.h" "*.cpp")
ADD_LIBRARY(SparkPlug_GL ${Sources})

TARGET_LINK_LIBRARIES(SparkPlug_GL SparkPlug_Core)


FIND_PACKAGE(OpenGL REQUIRED)
	INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})
	TARGET_LINK_LIBRARIES(SparkPlug_GL ${OPENGL_gl_LIBRARY})

FIND_PACKAGE(GLEW REQUIRED)
	INCLUDE_DIRECTORIES(${GLEW_INCLUDE_DIR})
	TARGET_LINK_LIBRARIES(SparkPlug_GL ${GLEW_LIBRARIES})


FILE(GLOB PublicHeaders RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.h")
SET_TARGET_PROPERTIES(SparkPlug_GL PROPERTIES PUBLIC_HEADER "${PublicHeaders}")

INSTALL(TARGETS SparkPlug_GL
    RUNTIME DESTINATION bin
    ARCHIVE DESTINATION lib
    LIBRARY DESTINATION lib
    PUBLIC_HEADER DESTINATION "include/SparkPlug/GL"
)
